<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0b0945"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0b0945"
        android:alpha="0.4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        android:layout_above="@id/card_view">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/navdhanlogo"
            android:contentDescription="App Logo"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NavDhan"
            android:fontFamily="@font/black"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Sign-Up TextView -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/text_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true" />
            </RelativeLayout>


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_dob"
                android:inputType="date"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />

            <CheckBox
                android:id="@+id/terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_terms_privacy"
                android:textColor="#000000"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btn_verify_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_account"
                android:textColor="@color/white"
                app:cornerRadius="12dp"
                android:backgroundTint="#0b0945"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/loginac_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_prompt"
                android:textColor="#000000"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
