<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0b0945"
    tools:context=".OtpActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <!-- OTP Input Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- OTP Input -->
            <EditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />



            <!-- Request OTP Button -->
            <Button
                android:id="@+id/btn_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0b0945"
                android:text="@string/request_otp"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp" />

            <!-- Enter OTP Button -->
            <Button
                android:id="@+id/btn_enter_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0b0945"
                android:textColor="@color/white"
                android:text="@string/verify_otp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
