<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <!-- Main Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0b0945">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="#0b0945"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:title="Home"
            android:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <!-- Main Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="700dp"
                app:cardCornerRadius="28dp"
                app:cardElevation="10dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/white">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="10dp"
                android:alignmentMode="alignMargins">

                <!-- Financial Education Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="118dp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/education"
                            android:layout_marginBottom="8dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/financial_education"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Goals Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="118dp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/goals"
                            android:layout_marginBottom="8dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/goals"

                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Savings and Investment Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/savings_investments"
                            android:layout_marginBottom="8dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/savings_and_investment"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Government Schemes Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/gvt_schemes"
                            android:layout_marginBottom="8dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/government_schemes"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Rewards and Progress Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/rewards"
                            android:layout_marginBottom="8dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rewards_and_progress"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Mentor Connect Card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/mentor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="118dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/mentor_connect" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/mentor_connect"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>

                <ImageView
                    android:id="@+id/fab_chatbot"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="end|bottom"
                    android:layout_marginBottom="160dp"
                    android:src="@drawable/chatbot"
                    android:contentDescription="Chatbot" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <!-- Floating Action Button after the Mentor Card -->


    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Bottom Navigation View -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:background="@color/white">

            <!-- Linear Layout for Navigation Items -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="8dp">

                <!-- Home Button -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="8dp">

                    <ImageButton
                        android:id="@+id/home"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_button_background"
                        android:src="@drawable/baseline_home_24"
                        android:contentDescription="Home" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="center" />
                </LinearLayout>

                <!-- Profile Button -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="8dp">

                    <ImageButton
                        android:id="@+id/profile"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_button_background"
                        android:src="@drawable/baseline_person_24"
                        android:contentDescription="Profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="center" />
                </LinearLayout>

                <!-- Wallet Button -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="8dp">

                    <ImageButton
                        android:id="@+id/wallet"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_button_background"
                        android:src="@drawable/wallet_24"
                        android:contentDescription="Wallet" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wallet"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="center" />
                </LinearLayout>

                <!-- Help Button -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="8dp">

                    <ImageButton
                        android:id="@+id/help"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_button_background"
                        android:src="@drawable/baseline_help_24"
                        android:contentDescription="Help" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Help"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="center" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_header" />

</androidx.drawerlayout.widget.DrawerLayout>